--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.1",
