--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "mysql2": "^3.11.5",
     "sequelize": "^6.37.5"
   }
 }
