design:아이디/비밀번호 찾기 페이지 UI 구현

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.1",
