--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.1",
