--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "dev": "node --env-file=.env.local app.js",
+    "start": "node --env-file=.env.production app.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
