--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "node --env-file=.env.local app.js",
-    "start": "node --env-file=.env.production app.js"
+    "start": "node --env-file=.env app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
